java: use 'Integer.valueOf' instead of 'new Integer'
Change-Id: Ia4a847b58862e4f25d64a862f504b629fa336c63