@@ -60,6 +60,7 @@ import com.sun.star.wizards.common.Resource;
 import com.sun.star.wizards.report.IReportBuilderLayouter;
 import com.sun.star.wizards.report.IReportDefinitionReadAccess;
 import com.sun.star.wizards.ui.UIConsts;
+
 import java.util.HashMap;
 import java.util.Locale;
 import java.util.logging.Level;
@@ -1028,8 +1029,8 @@ abstract public class ReportBuilderLayouter implements IReportBuilderLayouter
             setToPageStyles("IsLandscape", Boolean.TRUE);
             if (nWidth < nHeight)
             {
-                setToPageStyles(PropertyNames.PROPERTY_WIDTH, new Integer(nHeight));
-                setToPageStyles(PropertyNames.PROPERTY_HEIGHT, new Integer(nWidth));
+                setToPageStyles(PropertyNames.PROPERTY_WIDTH, Integer.valueOf(nHeight));
+                setToPageStyles(PropertyNames.PROPERTY_HEIGHT, Integer.valueOf(nWidth));
             }
         }
         else
@@ -1037,8 +1038,8 @@ abstract public class ReportBuilderLayouter implements IReportBuilderLayouter
             setToPageStyles("IsLandscape", Boolean.FALSE);
             if (nHeight < nWidth)
             {
-                setToPageStyles(PropertyNames.PROPERTY_WIDTH, new Integer(nHeight));
-                setToPageStyles(PropertyNames.PROPERTY_HEIGHT, new Integer(nWidth));
+                setToPageStyles(PropertyNames.PROPERTY_WIDTH, Integer.valueOf(nHeight));
+                setToPageStyles(PropertyNames.PROPERTY_HEIGHT, Integer.valueOf(nWidth));
             }
         }
         // dirty the PageWidth
@@ -1522,7 +1523,7 @@ abstract public class ReportBuilderLayouter implements IReportBuilderLayouter
                 final Size aSize = getPreferredSize(_sLabel, xFont);
                 nWidth = aSize.Width;
                 // cache the found width
-                m_aLabelWidthMap.put(sKey, new Integer(nWidth));
+                m_aLabelWidthMap.put(sKey, Integer.valueOf(nWidth));
             }
             catch (com.sun.star.uno.Exception e)
             {
