@@ -89,13 +89,13 @@ public abstract class ControlScroller
         this.curHelpIndex = _firsthelpindex;
         curtabindex = UnoDialog.setInitialTabindex(iStep);
         this.linedistance = _nlinedistance;
-        IStep = new Integer(iStep);
+        IStep = Integer.valueOf(iStep);
         this.iCompPosX = _iCompPosX;
         this.iCompPosY = _iCompPosY;
-        this.ICompPosX = new Integer(iCompPosX);
-        this.ICompPosY = new Integer(iCompPosY);
+        this.ICompPosX = Integer.valueOf(iCompPosX);
+        this.ICompPosY = Integer.valueOf(iCompPosY);
         this.iCompWidth = _iCompWidth;
-        this.ICompWidth = new Integer(iCompWidth);
+        this.ICompWidth = Integer.valueOf(iCompWidth);
         this.iCompHeight = 2 * SORELFIRSTPOSY + nblockincrement * linedistance;
         iStartPosY = iCompPosY + SORELFIRSTPOSY;
         int ScrollHeight = iCompHeight - 2;
@@ -109,7 +109,7 @@ public abstract class ControlScroller
                 },
                 new Object[]
                 {
-                    new Short((short) 0), Boolean.TRUE, new Integer(ScrollHeight), HelpIds.getHelpIdString(curHelpIndex), new Integer(ScrollBarOrientation.VERTICAL), new Integer(iCompPosX + iCompWidth - iScrollBarWidth - 1), new Integer(iCompPosY + 1), IStep, new Integer(iScrollBarWidth)
+                    new Short((short) 0), Boolean.TRUE, Integer.valueOf(ScrollHeight), HelpIds.getHelpIdString(curHelpIndex), Integer.valueOf(ScrollBarOrientation.VERTICAL), Integer.valueOf(iCompPosX + iCompWidth - iScrollBarWidth - 1), Integer.valueOf(iCompPosY + 1), IStep, Integer.valueOf(iScrollBarWidth)
                 });
         scrollfields = new ArrayList<PropertyValue[]>();
         int ypos = iStartPosY + SORELFIRSTPOSY;
@@ -122,7 +122,7 @@ public abstract class ControlScroller
 
     protected void setScrollBarOrientationHorizontal()
     {
-        Helper.setUnoPropertyValue(xScrollBar, PropertyNames.ORIENTATION, new Integer(ScrollBarOrientation.HORIZONTAL));
+        Helper.setUnoPropertyValue(xScrollBar, PropertyNames.ORIENTATION, Integer.valueOf(ScrollBarOrientation.HORIZONTAL));
     }
 
     /**
@@ -135,7 +135,7 @@ public abstract class ControlScroller
             ntotfieldcount = _ntotfieldcount;
             setCurFieldCount();
             nscrollvalue = 0;
-            Helper.setUnoPropertyValue(UnoDialog.getModel(xScrollBar), "ScrollValue", new Integer(nscrollvalue));
+            Helper.setUnoPropertyValue(UnoDialog.getModel(xScrollBar), "ScrollValue", Integer.valueOf(nscrollvalue));
             if (ntotfieldcount > nblockincrement)
             {
                 Helper.setUnoPropertyValues(UnoDialog.getModel(xScrollBar), new String[]
@@ -143,7 +143,7 @@ public abstract class ControlScroller
                             PropertyNames.PROPERTY_ENABLED, "BlockIncrement", "LineIncrement", "ScrollValue", "ScrollValueMax"
                         }, new Object[]
                         {
-                            Boolean.TRUE, new Integer(nblockincrement), new Integer(nlineincrement), new Integer(nscrollvalue), new Integer(ntotfieldcount - nblockincrement)
+                            Boolean.TRUE, Integer.valueOf(nblockincrement), Integer.valueOf(nlineincrement), Integer.valueOf(nscrollvalue), Integer.valueOf(ntotfieldcount - nblockincrement)
                         });
             }
             else
@@ -153,7 +153,7 @@ public abstract class ControlScroller
                             PropertyNames.PROPERTY_ENABLED, "ScrollValue"
                         }, new Object[]
                         {
-                            Boolean.FALSE, new Integer(nscrollvalue)
+                            Boolean.FALSE, Integer.valueOf(nscrollvalue)
                         });
             }
             fillupControls(true);
@@ -204,7 +204,7 @@ public abstract class ControlScroller
     {
         if (_nscrollvalue >= 0)
         {
-            Helper.setUnoPropertyValue(UnoDialog.getModel(xScrollBar), "ScrollValue", new Integer(_nscrollvalue));
+            Helper.setUnoPropertyValue(UnoDialog.getModel(xScrollBar), "ScrollValue", Integer.valueOf(_nscrollvalue));
             scrollControls();
         }
     }
@@ -248,7 +248,7 @@ public abstract class ControlScroller
                         PropertyNames.PROPERTY_ENABLED, "ScrollValueMax"
                     }, new Object[]
                     {
-                        Boolean.TRUE, new Integer(ntotfieldcount - nblockincrement)
+                        Boolean.TRUE, Integer.valueOf(ntotfieldcount - nblockincrement)
                     });
         }
         else
@@ -285,7 +285,7 @@ public abstract class ControlScroller
     protected void setLineIncrementation(int _nlineincrement)
     {
         this.nlineincrement = _nlineincrement;
-        Helper.setUnoPropertyValue(UnoDialog.getModel(xScrollBar), "LineIncrement", new Integer(nlineincrement));
+        Helper.setUnoPropertyValue(UnoDialog.getModel(xScrollBar), "LineIncrement", Integer.valueOf(nlineincrement));
 
     }
 
@@ -302,7 +302,7 @@ public abstract class ControlScroller
                     PropertyNames.PROPERTY_ENABLED, "BlockIncrement", "ScrollValueMax"
                 }, new Object[]
                 {
-                        Boolean.valueOf(ntotfieldcount > nblockincrement), new Integer(nblockincrement), new Integer(ntotfieldcount - nblockincrement)
+                        Boolean.valueOf(ntotfieldcount > nblockincrement), Integer.valueOf(nblockincrement), Integer.valueOf(ntotfieldcount - nblockincrement)
                 });
     }
 
