@@ -20,7 +20,6 @@ package com.sun.star.wizards.ui;
 import com.sun.star.awt.*;
 import com.sun.star.beans.Property;
 import com.sun.star.beans.XMultiPropertySet;
-
 import com.sun.star.beans.XPropertySet;
 import com.sun.star.container.XNameAccess;
 import com.sun.star.container.XNameContainer;
@@ -306,7 +305,7 @@ public class UnoDialog implements EventNames
         {
             xButton.addActionListener(xActionListener);
         }
-        Integer ControlKey = new Integer(iControlKey);
+        Integer ControlKey = Integer.valueOf(iControlKey);
         if (ControlList != null)
         {
             ControlList.put(sName, ControlKey);
@@ -325,7 +324,7 @@ public class UnoDialog implements EventNames
         {
             xCheckBox.addItemListener(xItemListener);
         }
-        Integer ControlKey = new Integer(iControlKey);
+        Integer ControlKey = Integer.valueOf(iControlKey);
         if (ControlList != null)
         {
             ControlList.put(sName, ControlKey);
@@ -343,7 +342,7 @@ public class UnoDialog implements EventNames
         {
             xNumericField.addTextListener(xTextListener);
         }
-        Integer ControlKey = new Integer(iControlKey);
+        Integer ControlKey = Integer.valueOf(iControlKey);
         if (ControlList != null)
         {
             ControlList.put(sName, ControlKey);
@@ -363,7 +362,7 @@ public class UnoDialog implements EventNames
             {
                 xScrollBar.addAdjustmentListener(xAdjustmentListener);
             }
-            Integer ControlKey = new Integer(iControlKey);
+            Integer ControlKey = Integer.valueOf(iControlKey);
             if (ControlList != null)
             {
                 ControlList.put(sName, ControlKey);
@@ -400,7 +399,7 @@ public class UnoDialog implements EventNames
             {
                 xTextBox.addTextListener(xTextListener);
             }
-            Integer ControlKey = new Integer(iControlKey);
+            Integer ControlKey = Integer.valueOf(iControlKey);
             ControlList.put(sName, ControlKey);
             return xTextBox;
         }
@@ -426,7 +425,7 @@ public class UnoDialog implements EventNames
         {
             xListBox.addActionListener(xActionListener);
         }
-        Integer ControlKey = new Integer(iControlKey);
+        Integer ControlKey = Integer.valueOf(iControlKey);
         ControlList.put(sName, ControlKey);
         return xListBox;
     }
@@ -451,7 +450,7 @@ public class UnoDialog implements EventNames
         {
             xComboBox.addActionListener(xActionListener);
         }
-        Integer ControlKey = new Integer(iControlKey);
+        Integer ControlKey = Integer.valueOf(iControlKey);
         ControlList.put(sName, ControlKey);
         return xComboBox;
     }
@@ -480,7 +479,7 @@ public class UnoDialog implements EventNames
     public XRadioButton insertRadioButton(String sName, int iControlKey, String[] sProperties, Object[] sValues)
     {
         XRadioButton xRadioButton = insertRadioButton(sName, sProperties, sValues);
-        Integer ControlKey = new Integer(iControlKey);
+        Integer ControlKey = Integer.valueOf(iControlKey);
         ControlList.put(sName, ControlKey);
         return xRadioButton;
     }
@@ -519,7 +518,7 @@ public class UnoDialog implements EventNames
             int iCurDialogStep = AnyConverter.toInt(Helper.getUnoPropertyValue(this.xDialogModel, PropertyNames.PROPERTY_STEP));
             if (bIsVisible)
             {
-                setControlProperty(controlname, PropertyNames.PROPERTY_STEP, new Integer(iCurDialogStep));
+                setControlProperty(controlname, PropertyNames.PROPERTY_STEP, Integer.valueOf(iCurDialogStep));
             }
             else
             {
@@ -541,7 +540,7 @@ public class UnoDialog implements EventNames
         {
             int ncurstep = AnyConverter.toInt(Helper.getUnoPropertyValue(this.xDialogModel, PropertyNames.PROPERTY_STEP));
             Helper.setUnoPropertyValue(xDialogModel, PropertyNames.PROPERTY_STEP, 99);
-            Helper.setUnoPropertyValue(xDialogModel, PropertyNames.PROPERTY_STEP, new Integer(ncurstep));
+            Helper.setUnoPropertyValue(xDialogModel, PropertyNames.PROPERTY_STEP, Integer.valueOf(ncurstep));
         }
         catch (com.sun.star.lang.IllegalArgumentException exception)
         {
